src/components/Footer/Footer.sass
@import "variables.sass"

footer
  position: relative
  font-weight: $font-light
  color: $color-white
  padding: $space-5 0
  padding-bottom: $space-7
  width: 100%
  z-index: 1
  background-color: $color-inverse

  .container
    display: flex
    flex-direction: column-reverse
    align-items: center

    & > *
      display: flex
      align-items: center
      margin: $space-2 0

    a
      white-space: nowrap
      color: $color-white
      margin: 0 $space-2


  @media (min-width: $screen-xl-min) // {}
    padding-bottom: $space-5

    .container
      flex-direction: row
      justify-content: space-between

  .social
    display: flex
    margin-left: $space-4

    .et-icon
      display: flex

      svg
        fill: $color-white
        width: 24px
        height: 24px

